--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/argon-design-system-react.git"
   },
-  "author": "1hanzla100",
+  "author": "Nuruddin Kawsar",
   "license": "MIT",
   "bugs": {
-    "url": "https://hanzla.ga"
+    "url": "https://"
   },
   "homepage": "",
   "scripts": {
